Fixing dark mode stuff.

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -474,12 +474,13 @@ div.note {
     display: block;
   }
 }
-@media print {
-  td {
-    padding-right: 8px;
-  }
-  table {
-    border-spacing: 0;
-    margin-bottom: 1em;
-  }
+td {
+  padding-right: 16px;
+}
+table {
+  border-spacing: 0;
+  margin-bottom: 1em;
+}
+li > p {
+  margin-bottom: 0.2em;
 }
